--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
     "name": "GCCProject",
-    "version": "1.1.0",
+    "version": "1.0.0",
     "date": "01/05/2016",
-    "author": "Vern Wolfley",
-    "email": "vwolfley@azmag.gov",
-    "url": "http://",
+    "description": "Map showing the Districts and Unit locations for the BSA Grand Canyon Council",
+    "keywords": ["BSA", "Boy Scouts of America","Grand Canyon Council", "Units", "Districts"],
+    "main": "index.js",
+    "homepage": "",
+    "author": "Vern Wolfley <@vernwolfley>",
+    "contributors": [{
+        "name": "Vern Wolfley",
+        "twitter": "@vernwolfley",
+        "email": ""
+    }, {
+        "name": "",
+        "email": ""
+    }],
     "private": true,
+    "dependencies": {
+
+    },
     "devDependencies": {
-        "grunt":                    "*",
-        "grunt-contrib-concat":     "*",
-        "grunt-contrib-csslint":    "*",
-        "grunt-contrib-cssmin":     "*",
-        "grunt-contrib-jshint":     "*",
-        "grunt-contrib-uglify":     "*",
-        "grunt-contrib-watch":      "*",
-        "grunt-htmlhint":           "*",
-        "grunt-version-check":      "*",
-        "jshint-stylish-ex":        "*",
-        "lodash":                   "*",
-        "matchdep":                 "*",
-        "normalize.css":            "*"
-    }
+        "grunt": "*",
+        "grunt-contrib-concat": "*",
+        "grunt-contrib-csslint": "*",
+        "grunt-contrib-cssmin": "*",
+        "grunt-contrib-jshint": "*",
+        "grunt-contrib-uglify": "*",
+        "grunt-contrib-watch": "*",
+        "grunt-htmlhint": "*",
+        "grunt-version-check": "*",
+        "grunt-text-replace":     "*",
+        "jshint-stylish-ex": "*",
+        "lodash": "*",
+        "matchdep": "*",
+        "normalize.css": "*"
+    },
+    "license": "MIT"
 }
